[package]
name = "private-voting"
version = "0.1.0"
edition = "2021"
authors = ["Yan Michalevsky (yan@cryptosat.io)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = "0.7.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.67"
wasm-bindgen-test = "0.3.33"

[lib]
crate-type = ["cdylib"]
