[package]
name = "private-voting"
version = "0.1.0"
edition = "2021"
authors = ["Yan Michalevsky (yan@cryptosat.io)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rsa = "0.7.1"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "*"
wasm-bindgen-test = "*"
sha2 = "*"
base64 = "0.13.1"

[lib]
crate-type = ["cdylib", "staticlib"]
